# paper-vs-real-pnl

./: .gitignore  LICENSE  README.md  pyproject.toml
src/paper_vs_real/: __main__.py  charts.py  cli.py  compute.py  fetch.py  og_image.py  report.py  types.py
tests/: test_charts.py  test_cli.py  test_compute_fees.py  test_compute_funding.py  test_compute_slippage.py  test_fetch.py  test_fetch_paginated.py  test_integration.py  test_report.py  test_types.py
tests/fixtures/: sample_candles_response.json  sample_fills_response.json  sample_funding_response.json
