[project]
name = "paper-vs-real-pnl"
version = "0.1.0"
description = "Audit a public Hyperliquid trade's real PnL after fees, funding, and slippage."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
]

[project.scripts]
paper-vs-real = "paper_vs_real.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_vs_real"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
